# ClawChain

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  package.json
.github/workflows/: deploy-vaultclaw-pitch.yml
monitor/: read_accounts.py  requirements.txt
orchestrator/: .env.example  bot_pool.py  chain.py  cloud_init.py  config.py  db.py  gcp.py  main.py  mock_state.yaml  requirements.txt  solana_rpc.py  solana_tx.py  telegram_bots.example.txt
orchestrator/tests/: conftest.py  test_bot_pool.py  test_chain_mock.py  test_cloud_init.py  test_db.py  test_gcp_health.py  test_orchestrator.py  test_solana_rpc.py
programs/claw_chain/: Cargo.toml
programs/claw_chain/src/: error.rs  lib.rs
programs/claw_chain/src/instructions/: bill.rs  deactivate.rs  deposit.rs  force_reset.rs  initialize.rs  initialize_service_status.rs  lock_for_provisioning.rs  mod.rs  refund_failed_provision.rs  set_bot_handle.rs  update_service_status.rs  withdraw_remaining.rs
programs/claw_chain/src/state/: mod.rs  operator_config.rs  service_status.rs  user_bot.rs
scripts/: devnet_deposit.ts  devnet_force_reset.ts  devnet_init.ts  devnet_wallets.ts
tests/: claw_chain.ts
web/: ClawChain-readme.md  README.md  astro.config.mjs  package-lock.json  package.json
web/public/pitch/: index.html
web/public/pitch-vaultclaw/: index.html
web/src/components/: Architecture.astro  Footer.astro  GlitchText.astro  Hero.astro  HowItWorks.astro  NeonButton.astro  StepCard.astro  Team.astro  TechStack.astro
web/src/hooks/: useProgram.ts  useServiceStatus.ts  useUserBot.ts
web/src/lib/: idl.json  (+1 more)
(+9 files in other folders)
