[package]
name = "claw_chain"
version = "0.1.0"
description = "ClawChain - AI Agents as a Service on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claw_chain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
